[project]
name = "2023"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "portion>=2.6.1",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
python_files = "day*.py"